Fix overflow x

--- a/src/components/ManageView/ManageView.less
+++ b/src/components/ManageView/ManageView.less
@@ -45,6 +45,7 @@
         width: 100%;
         flex-grow: 1;
         overflow-y: auto;
+        overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
     }
 
