--- a/src/components/TrainingView/TrainingView.less
+++ b/src/components/TrainingView/TrainingView.less
@@ -13,6 +13,7 @@
         top: 0;
         left: 0;
         overflow-y: auto;
+        overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
         transition: transform @duration-faster @ease-out-standard;
     }
